// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) AssemblyEditorModal — dark 1`] = `
{
  "lines": 119,
  "modalCount": 1,
  "sha256": "488ec6b4cef459427b651687b62b02abcea014e06b3c953b79ab144b3ffd9bf5",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) AssemblyEditorModal — light 1`] = `
{
  "lines": 119,
  "modalCount": 1,
  "sha256": "85f94dc98cd70428739f519e6a17cd0f656e804e7a17000682311e2099e9b712",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal (confirmed elsewhere) — dark 1`] = `
{
  "lines": 16,
  "modalCount": 1,
  "sha256": "49e15eb8bd27e91c56273a849a76813457a5d1526a85317a6a3414289a636ff2",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal (confirmed elsewhere) — light 1`] = `
{
  "lines": 16,
  "modalCount": 1,
  "sha256": "832670325ad04e743febaf2652086f5016e56a4edd7c69d9921a9a3820d06019",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal — dark 1`] = `
{
  "lines": 60,
  "modalCount": 1,
  "sha256": "fed40be450ad2b00203ea78fb045bc52b104e284e90b51cb145772f346fb6985",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ConfirmEmailModal — light 1`] = `
{
  "lines": 60,
  "modalCount": 1,
  "sha256": "33e7ab308e5f341bed7976a7ba48a3a7eafa53c99c698f8fe275ca172fb66991",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) EstimateLoadingOverlay — dark 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "f1ae4612a417c4dbcb08bd268940221731e1dbef2e35629c993434c259cf94fc",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) EstimateLoadingOverlay — light 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "c17946a1c413d4808608bfa1d03b4be85da142d0876778c1a9afcbf3f5f091ec",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InfoBubble — dark 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "8727905dc5bd411022d084a48ffb190a0f30c55bd725cf4fc909c8c99a290c72",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InfoBubble — light 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "fa2d2e9551721db5bb6f46a708bd1b5ddd2c140125727db2e7beda3cce63a8a5",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InstantBidProposalModal — dark 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "a958f796ae16ca2341468341d9ee3ad87eedf7cdc5df21aed015c32cba5abf46",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) InstantBidProposalModal — light 1`] = `
{
  "lines": 46,
  "modalCount": 1,
  "sha256": "809a63a21a6897c27267e840f6815f7afd231c8129749fd55561cfee137a74dc",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) OfflineSyncPill (failed) — dark 1`] = `
{
  "lines": 52,
  "modalCount": 1,
  "sha256": "6adee350d029dffba465f2f1f7305e4691984e2e78ed2d10469be23c3eab2653",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) OfflineSyncPill (failed) — light 1`] = `
{
  "lines": 52,
  "modalCount": 1,
  "sha256": "4597be8d31451f777b1a4d301d76d4a86550b19e2a387304003b72f65798f139",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PropertyManagerHome — dark 1`] = `
{
  "lines": 106,
  "modalCount": 1,
  "sha256": "49b1923b22fcbd7f95fcf2c6c36a2b0ab75bb26af46a4112013a9bdeecfbe6ed",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PropertyManagerHome — light 1`] = `
{
  "lines": 106,
  "modalCount": 1,
  "sha256": "dcf0dd7ef2c7a3107d2a62c2cc642c4096f6a86b5b23e30e466c6ae8747307d7",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PunchExportSheet — dark 1`] = `
{
  "lines": 84,
  "modalCount": 1,
  "sha256": "7f6260392165ec3a95260d09ac3d38939b04a2d26049da86e5649c2602434316",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) PunchExportSheet — light 1`] = `
{
  "lines": 84,
  "modalCount": 1,
  "sha256": "a16b29a6a314417304872e5ff44b79b8f316e3dce50bba3a7f0985f000d5c77a",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) QuickFieldUpdate — dark 1`] = `
{
  "lines": 181,
  "modalCount": 2,
  "sha256": "7cef9d0b3063503a6d242db4d90ed84d9528152351aa1defb5c7521842813781",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) QuickFieldUpdate — light 1`] = `
{
  "lines": 181,
  "modalCount": 2,
  "sha256": "cddfe5511b0302a39f66238242ae56b2ccbc77067372f8ac2b0c1ac26141d034",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) RateOverrideModal — dark 1`] = `
{
  "lines": 55,
  "modalCount": 1,
  "sha256": "ff3e46c179b1fa53847a950396da59734d23bbf1cbc8846926e61378f12c5350",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) RateOverrideModal — light 1`] = `
{
  "lines": 55,
  "modalCount": 1,
  "sha256": "5d9f2a1fdf81b4276dc0945941ca301d425e53d8d2036ccce4b23f91cb39aa48",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ReferralPrompt — dark 1`] = `
{
  "lines": 40,
  "modalCount": 1,
  "sha256": "426f130290716f3a0fe002be3ebd071b52326b9008b558bbaf734bd26e25c55e",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) ReferralPrompt — light 1`] = `
{
  "lines": 40,
  "modalCount": 1,
  "sha256": "62354028be288c8dd47325cc2771241ba8674061570b2636654093b949d25d90",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) SubDailyUpdateModal — dark 1`] = `
{
  "lines": 117,
  "modalCount": 1,
  "sha256": "0bc4f9a20953c716a9b50cbbfebec1dd4238ab1e25c232859b4da3b86c3b546f",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) SubDailyUpdateModal — light 1`] = `
{
  "lines": 117,
  "modalCount": 1,
  "sha256": "a30d5a9a12c80a8f556e2d8d4aafc2707f136fc3ac619143e753fd4f90a3aa7b",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (existing) — dark 1`] = `
{
  "lines": 47,
  "modalCount": 1,
  "sha256": "c676ae6711e23be0eb0f0a67e314e2edaf09ce30afd732ff020ec7f8a0eb1ed2",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (existing) — light 1`] = `
{
  "lines": 47,
  "modalCount": 1,
  "sha256": "ff503482567269044d1a5697c50936eda2370e948dc511a5b7ebc2c1aa45738c",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (new) — dark 1`] = `
{
  "lines": 35,
  "modalCount": 1,
  "sha256": "f9e04323dfe72015410f7e6824c11e54cba5adfda35f28a56bff03da348804a6",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) TakeoffFieldVerifyButton (new) — light 1`] = `
{
  "lines": 35,
  "modalCount": 1,
  "sha256": "c8ab9b936e18b9d37946bd58bca499b9ad86bfe862673d6b3c5b04727ff36ea3",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UniversalMicButton — dark 1`] = `
{
  "lines": 87,
  "modalCount": 2,
  "sha256": "59a1280101e697c8a7af567f55ba4c915426582214c4450c66295ac3d5a047ba",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UniversalMicButton — light 1`] = `
{
  "lines": 87,
  "modalCount": 2,
  "sha256": "051d01dc29192beee55038e991b87ede23a6610b6d4f260b9cc659ccfd452a0c",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UpgradeSheet — dark 1`] = `
{
  "lines": 42,
  "modalCount": 1,
  "sha256": "256a45ce6f9d0be0d187c07e64799852d0c2ece494e1419af7762ea001366b34",
}
`;

exports[`lane X1 — A1 / A2: each dialog alone (golden, iOS 390) UpgradeSheet — light 1`] = `
{
  "lines": 42,
  "modalCount": 1,
  "sha256": "74bad97c20ccdb5aff700be26ee2f7ac2830f918937ff652de8a6f3f322dfcfb",
}
`;

exports[`lane X1 — D: the classic schedule tab (golden, android 800 × 1280) /(tabs)/schedule?projectId — ScheduleScreen's non-desktop branch 1`] = `
{
  "lines": 2194,
  "modalCount": 19,
  "sha256": "1e0702f316336b1f0ee3581bdbf84b5996850e5b03f33ab8bb6f25486f3185c9",
}
`;

exports[`lane X1 — PunchExportHeaderButton alone (golden, iOS 390) dark — the phone label stays "Export" 1`] = `
{
  "lines": 11,
  "modalCount": 0,
  "sha256": "88ff5fef7ea44af42d4381b852c317927a9ba02816207d52bb6b827c962b1605",
}
`;

exports[`lane X1 — PunchExportHeaderButton alone (golden, iOS 390) light — the phone label stays "Export" 1`] = `
{
  "lines": 11,
  "modalCount": 0,
  "sha256": "b0fc30a0fb3422a468493c2294cbabae1036fbcbfd4cbcd1a2cf7f4257dc4511",
}
`;
